# Realtime-Detail-Processing-Stack

./: README.md  manifest.txt  render.yaml
backend/: Cargo.toml  Dockerfile
backend/logs/: latest.json
backend/src/: main.rs  models.rs  plugins.rs  sse.rs  state.rs
diagrams/: system.mmd
frontend/: index.html  package.json
frontend/src/: App.vue  styles.css
frontend/src/lib/: api.ts  types.ts
laravel-bridge/: Dockerfile  composer.json
laravel-bridge/app/Http/Controllers/: RealtimeController.php
laravel-bridge/routes/: web.php
plugins/c/: monitor.c
plugins/cpp/: verify.cpp
plugins/java/: Executor.java
plugins/mojo/: processor.mojo
plugins/python/: analyze.py
plugins/zig/: processor.zig
